--- a/index.html
+++ b/index.html
@@ -12,49 +12,59 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
+      <div class="container main-nav">
         <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-        <ul class="nav-list list">
-          <li><a class="link curent" href="./index.html">Студія</a></li>
-          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="link" href="">Контакти</a></li>
+        <nav> 
+          <ul class="nav-list list">
+            <li class="item"><a class="link curent" href="./index.html">Студія</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="address-list list">
+          <li class="item">
+            <a class="info-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="info-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <a class="info-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="info-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        
+      </div>
     </header>
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="btn">Замовити послугу</button>
       </section>
-      <section class="advantages">
-        <ul class="list">
-          <li>
+      <section class="advantages-section container">
+        <ul class="advantages-list list">
+          <li class="item">
             <h3 class="advantages-title">Увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="advantages-title">Пунктуальність</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="advantages-title">Планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="advantages-title">Сучасні технології</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -63,24 +73,24 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="examples-section container">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
+        <ul class="examples-list list">
+          <li class="item">
             <img
               src="./images/img.jpg"
               alt="Написання коду на комп'ютері"
               width="370"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/img2.jpg"
               alt="Робота за ноутом і смартфоном"
               width="370"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/img3.jpg"
               alt="Планшет з палітрою кольорів"
@@ -89,25 +99,25 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team-section container">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="team-list list">
+          <li class="item">
             <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3 class="names-title">Ігор Дем'яненко</h3>
             <p class="position">Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" />
             <h3 class="names-title">Ольга Рєпіна</h3>
             <p class="position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" />
             <h3 class="names-title">Микола Тарасов</h3>
             <p class="position">Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/mikhailo.jpg"
               alt="Михайло Єрмаков"
@@ -120,13 +130,16 @@
       </section>
     </main>
     <footer>
-      <a class="logo footer" href="./index.html"><span>Web</span>Studio</a>
+      <div class="container">
+        <a class="logo footer" href="./index.html"><span>Web</span>Studio</a>
       <address class="address-title">
         м. Київ, пр-т Лесі Українки, 26<br/>
         <a class="address-link" href="mailto:info@devstudio.com"
           >info@devstudio.com</a><br/>
         <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
+      </div>
+      
     </footer>
   </body>
 </html>
