--- a/portfolio.html
+++ b/portfolio.html
@@ -8,129 +8,139 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
+      <div class="container main-nav">
         <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-        <ul class="nav-list list">
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link curent" href="">Портфоліо</a></li>
-          <li><a class="link" href="">Контакти</a></li>
+        <nav> 
+          <ul class="nav-list list">
+            <li class="nav-list-item"><a class="link" href="./index.html">Студія</a></li>
+            <li class="nav-list-item"><a class="link curent" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-list-item"><a class="link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="address-list list">
+          <li class="address-list-item">
+            <a class="info-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-list-item">
+            <a class="info-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <a class="info-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="info-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        
+      </div>
     </header>
     <main>
-      <section>
-        <ul class="filter list">
-          <li><button type="button" class="filter-btn current">Усі</button></li>
-          <li><button type="button" class="filter-btn">Веб-сайти</button></li>
-          <li><button type="button" class="filter-btn">Додатки</button></li>
-          <li><button type="button" class="filter-btn">Дизайн</button></li>
-          <li><button type="button" class="filter-btn">Маркетинг</button></li>
-        </ul>
-        <ul class="work list">
-          <li>
-            <img
-              src="./images/technokryak.jpg"
-              alt="Веб-сай Технокряк"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Технокряк</h3>
-            <p class="work-description">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/posterneworlean.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Постер New Orlean vs Golden Star</h3>
-            <p class="work-description">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/restoraunt.jpg"
-              alt="Логотип Ресторану Seafood"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Ресторан Seafood</h3>
-            <p class="work-description">Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/projectprime.jpg"
-              alt="Наушники"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Проєкт Prime</h3>
-            <p class="work-description">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/projectboxes.jpg"
-              alt="Дві коробки"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Проєкт Boxes</h3>
-            <p class="work-description">Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/inspiration.jpg"
-              alt="IMac з веб-сайтом Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Inspiration has no Borders</h3>
-            <p class="work-description">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/limitededition.jpg"
-              alt="Журнал з виданням Limited Edition"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Видання Limited Edition</h3>
-            <p class="work-description">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/projectlab.jpg"
-              alt="Мокап проєкту LAB"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Проєкт LAB</h3>
-            <p class="work-description">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/growingbusiness.jpg"
-              alt="Ноутбук з додатком Growing Business"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-title">Growing Business</h3>
-            <p class="work-description">Додаток</p>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <ul class="filter-list list">
+            <li class="filter-list-item"><button type="button" class="filter-btn current">Усі</button></li>
+            <li class="filter-list-item"><button type="button" class="filter-btn">Веб-сайти</button></li>
+            <li class="filter-list-item"><button type="button" class="filter-btn">Додатки</button></li>
+            <li class="filter-list-item"><button type="button" class="filter-btn">Дизайн</button></li>
+            <li class="filter-list-item"><button type="button" class="filter-btn">Маркетинг</button></li>
+          </ul>
+          <ul class="work-list list">
+            <li class="work-list-item">
+              <img
+                src="./images/technokryak.jpg"
+                alt="Веб-сай Технокряк"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Технокряк</h3>
+              <p class="work-description">Веб-сайт</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/posterneworlean.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Постер New Orlean vs Golden Star</h3>
+              <p class="work-description">Дизайн</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/restoraunt.jpg"
+                alt="Логотип Ресторану Seafood"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Ресторан Seafood</h3>
+              <p class="work-description">Додаток</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/projectprime.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Проєкт Prime</h3>
+              <p class="work-description">Маркетинг</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/projectboxes.jpg"
+                alt="Дві коробки"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Проєкт Boxes</h3>
+              <p class="work-description">Додаток</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/inspiration.jpg"
+                alt="IMac з веб-сайтом Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Inspiration has no Borders</h3>
+              <p class="work-description">Веб-сайт</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/limitededition.jpg"
+                alt="Журнал з виданням Limited Edition"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Видання Limited Edition</h3>
+              <p class="work-description">Дизайн</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/projectlab.jpg"
+                alt="Мокап проєкту LAB"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Проєкт LAB</h3>
+              <p class="work-description">Маркетинг</p>
+            </li>
+            <li class="work-list-item">
+              <img
+                src="./images/growingbusiness.jpg"
+                alt="Ноутбук з додатком Growing Business"
+                width="370"
+                height="294"
+              />
+              <h3 class="work-title">Growing Business</h3>
+              <p class="work-description">Додаток</p>
+            </li>
+          </ul>
+        </div>      
       </section>
     </main>
     <footer>
+      <div class="container">
         <a class="logo footer" href="./index.html"><span>Web</span>Studio</a>
         <address class="address-title">
           м. Київ, пр-т Лесі Українки, 26<br/>
@@ -138,6 +148,7 @@
             >info@devstudio.com</a><br/>
           <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+      </div>
       </footer>
   </body>
 </html>
